--- a/package.json
+++ b/package.json
@@ -33,16 +33,17 @@
     "url": "https://github.com/elunez/eladmin/issues"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
     "@riophae/vue-treeselect": "^0.4.0",
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-vue": "^1.0.2",
     "axios": "^0.21.1",
     "clipboard": "2.0.4",
-    "codemirror": "^5.49.2",
+    "codemirror": "^5.65.15",
     "core-js": "^2.6.12",
-    "echarts": "^4.2.1",
+    "echarts": "^4.9.0",
     "echarts-wordcloud": "^1.1.3",
-    "element-ui": "^2.15.8",
+    "element-ui": "^2.15.14",
     "file-saver": "1.3.8",
     "fuse.js": "3.4.4",
     "js-beautify": "^1.10.2",
@@ -56,7 +57,9 @@
     "qs": "^6.10.1",
     "screenfull": "4.2.0",
     "sortablejs": "1.8.4",
+    "v-code-diff": "^1.7.1",
     "vue": "^2.6.14",
+    "vue-codemirror": "^4.0.6",
     "vue-count-to": "^1.0.13",
     "vue-cropper": "0.4.9",
     "vue-echarts": "^5.0.0-beta.0",
